samples/_failures_safe/1761336999_f482a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_229a98a2.c: In function ‘main’:
./samples/SAFE/__tmp_229a98a2.c:143:5: error: expected declaration or statement at end of input
  143 |     size_t decompressed_size = decompress_rle(compressed, compressed_size, decompressed, sizeof(decompressed));
      |     ^~~~~~
